--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.foodapp.appfood">
+    package="com.foodapp.murti">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> -->
@@ -10,31 +10,31 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
-        android:name=".Utils.AppController"
+        android:name="com.foodapp.murti.Utils.AppController"
         android:allowBackup="false"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activity.MainActivity"
+            android:name="com.foodapp.murti.Activity.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activity.Login"
+            android:name="com.foodapp.murti.Activity.Login"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activity.SignnUp"
+            android:name="com.foodapp.murti.Activity.SignnUp"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activity.Navigation"
+            android:name="com.foodapp.murti.Activity.Navigation"
             android:label="@string/title_activity_navigation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".Activity.ForgotPassword"
+            android:name="com.foodapp.murti.Activity.ForgotPassword"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Activity.Splash"
+            android:name="com.foodapp.murti.Activity.Splash"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,9 +48,9 @@
             android:value="AIzaSyAxiWg38diByRecN7BVw3i7N4VE93wTRqQ" />
 
         <activity
-            android:name=".Activity.ThankAct"
+            android:name="com.foodapp.murti.Activity.ThankAct"
             android:screenOrientation="portrait" />
-        <activity android:name=".Activity.PaymentAct" android:screenOrientation="portrait"></activity>
+        <activity android:name="com.foodapp.murti.Activity.PaymentAct" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
