--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <application
         android:name="com.foodapp.murti.Utils.AppController"
         android:allowBackup="false"
-        android:icon="@drawable/murti1"
+        android:icon="@drawable/new_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
