--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'me.relex:circleindicator:1.2.2@aar'
+    compile 'com.google.firebase:firebase-messaging:9.6.0'
 //    compile 'com.payumoney.core:payumoney-sdk:7.1.0'
 //
 //    compile('com.payumoney.sdkui:plug-n-play:1.1.0') {
@@ -52,3 +53,4 @@ dependencies {
     compile 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
 
 }
+apply plugin: 'com.google.gms.google-services'
