--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'me.relex:circleindicator:1.2.2@aar'
     compile 'com.google.firebase:firebase-messaging:9.6.0'
+    compile 'com.google.android.gms:play-services:11.4.0'
 //    compile 'com.payumoney.core:payumoney-sdk:7.1.0'
 //
 //    compile('com.payumoney.sdkui:plug-n-play:1.1.0') {
