--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 //    }
     compile 'com.payumoney.sdkui:plug-n-play:1.4.0'
     compile 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+//    compile 'com.android.support:recyclerview-v7:26.1.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
