--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "com.foodapp.murti"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 29
         multiDexEnabled true
-        versionCode 3
-        versionName "1.2"
+        versionCode 14
+        versionName "2.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -34,26 +34,26 @@ dependencies {
 
 
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'net.bohush.geometricprogressview:geometricprogressview:1.1.1'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.google.android.gms:play-services-maps:10.2.1'
-    compile 'me.relex:circleindicator:1.2.2@aar'
-    compile 'com.google.firebase:firebase-messaging:9.6.0'
-    compile 'com.google.android.gms:play-services:11.4.0'
+    implementation  'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation  'com.android.support:appcompat-v7:28.0.0'
+    implementation  'com.android.support:design:28.0.0'
+    implementation  'com.android.support:support-v4:28.0.0'
+    implementation  'com.android.support:cardview-v7:28.0.0'
+    implementation  'net.bohush.geometricprogressview:geometricprogressview:1.1.1'
+    implementation  'com.android.volley:volley:1.1.0'
+    implementation  'com.google.android.gms:play-services-maps:10.2.1'
+    implementation  'me.relex:circleindicator:1.2.2@aar'
+    implementation  'com.google.firebase:firebase-messaging:9.6.0'
+    implementation  'com.google.android.gms:play-services:11.4.0'
 //    compile 'com.payumoney.core:payumoney-sdk:7.1.0'
 //
 //    compile('com.payumoney.sdkui:plug-n-play:1.1.0') {
 //        transitive = true;
 //        exclude module: 'payumoney-sdk'
 //    }
-    compile 'com.payumoney.sdkui:plug-n-play:1.4.0'
-    compile 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
-//    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.romainpiel.shimmer:library:1.4.0@aar'
+    implementation  'com.payumoney.sdkui:plug-n-play:1.4.0'
+    implementation  'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
+//    implementation  'com.android.support:recyclerview-v7:26.1.0'
+    implementation  'com.romainpiel.shimmer:library:1.4.0@aar'
 }
 apply plugin: 'com.google.gms.google-services'
