--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
 
 
 
-
     <uses-permission
         android:name="android.permission.RECEIVE_SMS"
         tools:node="remove" />
@@ -29,12 +28,17 @@
         android:name="com.foodapp.murti.Utils.AppController"
         android:allowBackup="false"
         android:icon="@mipmap/new_logo"
-
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config">
+
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
         <activity
             android:name="com.foodapp.murti.Activity.MainActivity"
             android:screenOrientation="portrait" />
