--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,8 @@ dependencies {
     implementation  'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
 //    implementation  'com.android.support:recyclerview-v7:26.1.0'
     implementation  'com.romainpiel.shimmer:library:1.4.0@aar'
+
+    compile 'com.jsibbold:zoomage:1.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 apply plugin: 'com.google.gms.google-services'
